edit: contact us style changes

--- a/app/src/app/components/blocks/test-block/test-block.component.html
+++ b/app/src/app/components/blocks/test-block/test-block.component.html
@@ -1,68 +1,45 @@
-<h1 class="m-t-l ta-center m-b-l">This is our photo Gallery</h1>
-<div class="container">
-    <div class="gallery flex">
-        <div class="gallery-item col-4">
-            <img class="gallery-image" src="assets/images/landing.png">
+<section>
+    <h1 class="contact-landing-text ta-center m-a-l">Contact Us</h1>
+    <div class="flex ai-start">
+
+        <div class="contact-us-left">
+            <img class="contact-us-photo m-x-l" src="assets/images/contact-us-photo.jpg">
+
+            <a href="https://www.facebook.com/CRISPR.EpigeneticsGlycosylation/?_rdc=1&_rdr">
+                <img class="m-a-m m-x-xl" alt="facebook" src="assets/images/face-logo.png"
+                     width="40" height="40">
+            </a>
+
+            <a href="https://www.linkedin.com/in/vlatka-zoldo%C5%A1-b4091b66/?originalSubdomain=hr">
+                <img class="m-a-m m-x-xl" alt="linkedin" src="assets/images/linkedin-logo.png"
+                     width="30" height="30">
+            </a>
+
+            <a href="https://www.researchgate.net/profile/Vlatka_Zoldos2">
+                <img class="m-a-m m-x-xl" alt="researchgate" src="assets/images/researchgate-logo.png"
+                     width="35" height="35">
+            </a>
         </div>
-        <div class="gallery-item col-4">
-            <img class="gallery-image" src="assets/images/lab-members-vlatka.jpg">
-        </div>
-        <div class="gallery-item col-4">
-            <img class="gallery-image" src="assets/images/lab-members-aleksandar.jpg">
-        </div>
-        <div class="gallery-item col-4">
-            <img class="gallery-image" src="assets/images/landing.png">
-        </div>
-        <div class="gallery-item col-4">
-            <img class="gallery-image" src="assets/images/lab-members-vlatka.jpg">
-        </div>
-        <div class="gallery-item col-4">
-            <img class="gallery-image" src="assets/images/lab-members-aleksandar.jpg">
+
+        <div class="contact-us-right ta-center p-x-m">
+            <h2 class="m-a-m">Vlatka Zoldoš</h2>
+            <h4>Principle Investigator</h4>
+            <h4>Laboratory for Epigenetics</h4>
+            <p class="m-a-s">e-mail: vzoldos@biol.pmf.hr</p>
+            <h3 class="m-a-s">Location:</h3>
+            <h5>BIOCentre - Incubation centre for biosceinces</h5>
+            <h5>Borongajska cesta 83</h5>
+            <h5 class="m-b-l">10000 Zagreb, Croatia </h5>
+            <img src="assets/images/biocentar-image.jpg">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2781.243323219458!2d16.03572229311265!3d45.80638509274038!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4766787fe576a62f%3A0x2b825c7013578a16!2sBorongajska%20cesta%2083%2C%2010000%2C%20Zagreb!5e0!3m2!1shr!2shr!4v1591608408454!5m2!1shr!2shr"
+                    width="600" height="300" frameborder="0" style="border:0;" allowfullscreen=""
+                    aria-hidden="false" tabindex="0"></iframe>
+            <br>
+            <img class="m-a-m" src="assets/images/biocentar-logo.png">
+            <br>
+            <h5>Full professor at University of Zagreb Faculty of Science</h5>
+            <h5>Department of Biology; Division for Molecular Biology</h5>
+            <p class="m-a-s">Horvatovac 102A; 10000 Zagreb, Croatia</p>
         </div>
     </div>
-
-    <section>
-        <h1 class="contact-landing-text ta-center m-a-l">Contact Us</h1>
-        <div class="flex ai-start">
-
-            <div class="contact-us-left">
-                <img class="contact-us-photo" src="assets/images/contact-us-photo.jpg">
-
-                <a href="https://www.facebook.com/CRISPR.EpigeneticsGlycosylation/?_rdc=1&_rdr">
-                    <img class="m-a-m m-x-l" alt="facebook" src="assets/images/face-logo.png"
-                         width="40" height="40">
-                </a>
-
-                <a href="https://www.linkedin.com/in/vlatka-zoldo%C5%A1-b4091b66/?originalSubdomain=hr">
-                    <img class="m-a-m m-x-xl" alt="linkedin" src="assets/images/linkedin-logo.png"
-                         width="30" height="30">
-                </a>
-
-                <a href="https://www.researchgate.net/profile/Vlatka_Zoldos2">
-                    <img class="m-a-m m-x-l" alt="researchgate" src="assets/images/researchgate-logo.png"
-                         width="35" height="35">
-                </a>
-            </div>
-
-            <div class="contact-us-right ta-center p-x-m">
-                <h2 class="m-a-m">Vlatka Zoldoš asdas</h2>
-                <h4>Principle Investigator</h4>
-                <h4>Laboratory for Epigenetics</h4>
-                <p class="m-a-s">e-mail: vzoldos@biol.pmf.hr</p>
-                <h3 class="m-a-s">Location:</h3>
-                <h5>BIOCentre - Incubation centre for biosceinces</h5>
-                <h5>Borongajska cesta 83</h5>
-                <h5 class="m-b-l">10000 Zagreb, Croatia </h5>
-                <img src="assets/images/biocentar-image.jpg">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2781.243323219458!2d16.03572229311265!3d45.80638509274038!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4766787fe576a62f%3A0x2b825c7013578a16!2sBorongajska%20cesta%2083%2C%2010000%2C%20Zagreb!5e0!3m2!1shr!2shr!4v1591608408454!5m2!1shr!2shr"
-                        width="600" height="300" frameborder="0" style="border:0;" allowfullscreen=""
-                        aria-hidden="false" tabindex="0"></iframe>
-                <br>
-                <img class="m-a-m" src="assets/images/biocentar-logo.png">
-                <br>
-                <h5>Full professor at University of Zagreb Faculty of Science</h5>
-                <h5>Department of Biology; Division for Molecular Biology</h5>
-                <p class="m-a-s">Horvatovac 102A; 10000 Zagreb, Croatia</p>
-            </div>
-        </div>
-    </section>
+</section>
