edit: style for single-page news

--- a/app/src/app/news/component/news-list/news-list.component.html
+++ b/app/src/app/news/component/news-list/news-list.component.html
@@ -1,6 +1,6 @@
 <section>
     <div class="grid m-t-xl">
-        <div class="col-10 b-r b-l">
+        <div class="col-12">
             <div class="col-12 ta-center">
                 <h1>{{item.title}}</h1>
             </div>
