edit: font style change

--- a/app/src/scss/01-generic/_generic.scss
+++ b/app/src/scss/01-generic/_generic.scss
@@ -9,8 +9,8 @@
  *============================================================================*/
 
 @font-face {
-  font-family: 'Futura';
-  src: url("assets/fonts/FuturaLT.ttf");
+  font-family: 'Gotham Book';
+  src: url("assets/fonts/Gotham-Book.otf");
   font-weight: normal;
 }
 
@@ -42,7 +42,7 @@ body {
 /* Headings
  *============================================================================*/
 h1, h2, h3, h4, h5  {
-  font-family: "Futura", sans-serif;
+  font-family: "Gotham Book", sans-serif;
   text-transform: uppercase;
 }
 
