--- a/app/src/app/photo-gallery/component/photo-gallery/photo-gallery.component.html
+++ b/app/src/app/photo-gallery/component/photo-gallery/photo-gallery.component.html
@@ -1,1 +1,26 @@
-<p class="m-t-xl">photo-gallery works!</p>
+<div class="main flex jc-center ai-center">
+    <h1 class="ta-center b-b">{{page.title}}</h1>
+</div>
+<div class="grid">
+    <h1 class="w-full ta-center m-y-l">{{page.title}}</h1>
+    <div class="wrapper flex jc-start fw-wrap">
+        <div class="gallery-sidebar">
+<!--            <div class="select-wrapper m-b-l">-->
+<!--                <select class="gallery-select" (change)="yearSelected($event)">-->
+<!--                    <option value="" class="option-value">Select a year</option>-->
+<!--                    <option *ngFor="let year of items$ | async" [value]="year.year" class="option-value">{{year.year}}</option>-->
+<!--                </select>-->
+<!--            </div>-->
+        </div>
+        <a [routerLink]="['/gallery', year.year]" class="gallery-container" *ngFor="let year of items$ | async" [id]="year.year">
+            <div class="year-wrapper m-y-m">
+                <h2 class="year">{{year.year}}</h2>
+            </div>
+            <div class="flex fw-wrap jc-start ai-center">
+                <div class="gallery-item col-4" >
+                    <img class="gallery-image" [src]="year.imageGallery[0]">
+                </div>
+            </div>
+        </a>
+    </div>
+</div>
