--- a/app/src/app/publications/component/publications/publications.component.html
+++ b/app/src/app/publications/component/publications/publications.component.html
@@ -18,7 +18,7 @@
             <div class="col-8 pub-container m-t-m">
                 <div class="year-wrapper m-y-m" *ngFor="let year of items$ | async" [id]="year.year">
                     <h2 class="pub-year">{{year.year}}</h2>
-                    <div class="wrapper flex p-x-l fw-wrap" *ngFor="let item of year.publications">
+                    <div class="flex p-x-l fw-wrap" *ngFor="let item of year.publications">
                         <p class="publication"><span class="name">{{item.name}}</span><b>{{item.title}}</b> <br> <span>{{item.description}}</span></p>
                         <a [routerLink]="item.route" class="link">Publication</a>
                     </div>
