feat(): added fields for photo-gallery CMS

--- a/app/src/app/photo-gallery/component/photo-gallery/photo-gallery.component.html
+++ b/app/src/app/photo-gallery/component/photo-gallery/photo-gallery.component.html
@@ -4,15 +4,7 @@
 <div class="grid">
     <h1 class="w-full ta-center m-y-l">{{page.title}}</h1>
     <div class="wrapper flex jc-start fw-wrap">
-        <div class="gallery-sidebar">
-<!--            <div class="select-wrapper m-b-l">-->
-<!--                <select class="gallery-select" (change)="yearSelected($event)">-->
-<!--                    <option value="" class="option-value">Select a year</option>-->
-<!--                    <option *ngFor="let year of items$ | async" [value]="year.year" class="option-value">{{year.year}}</option>-->
-<!--                </select>-->
-<!--            </div>-->
-        </div>
-        <a [routerLink]="['/gallery', year.year]" class="gallery-container" *ngFor="let year of items$ | async" [id]="year.year">
+        <a  class="gallery-container" *ngFor="let year of items$ | async" [id]="year.year">
             <div class="year-wrapper m-y-m">
                 <h2 class="year">{{year.year}}</h2>
             </div>
