--- a/app/src/app/photo-gallery/component/photo-gallery/photo-gallery.component.html
+++ b/app/src/app/photo-gallery/component/photo-gallery/photo-gallery.component.html
@@ -1,18 +1,14 @@
 <div class="main flex jc-center ai-center">
     <h1 class="ta-center b-b">{{page.title}}</h1>
 </div>
-<div class="grid">
-    <h1 class="w-full ta-center m-y-l">{{page.title}}</h1>
-    <div class="wrapper flex jc-start fw-wrap">
-        <a [routerLink]="['/gallery', year.year]" class="gallery-container" *ngFor="let year of items$ | async" [id]="year.year">
-            <div class="year-wrapper m-y-m">
-                <h2 class="year">{{year.year}}</h2>
+<div class="grid m-y-m">
+    <h1 class="w-full ta-center m-y-l">Browse trough our galleries</h1>
+    <a [routerLink]="year.route" class=" col-4" *ngFor="let year of items$ | async" [id]="year.year">
+        <div class="gallery-card">
+            <h2 class="year m-y-s">{{year.year}}</h2>
+            <div class="image-wrapper w-full" >
+                <img class="gallery-image" [src]="year.image">
             </div>
-            <div class="flex fw-wrap jc-start ai-center">
-                <div class="gallery-item col-4" >
-                    <img class="gallery-image" [src]="year.image">
-                </div>
-            </div>
-        </a>
-    </div>
+        </div>
+    </a>
 </div>
