--- a/app/src/app/components/blocks/test-block/test-block.component.scss
+++ b/app/src/app/components/blocks/test-block/test-block.component.scss
@@ -36,3 +36,91 @@
   position: sticky;
   top: 100px;
 }
+
+
+
+.members {
+  &-container {
+    position: relative;
+    height: 0;
+    padding-bottom: calc(1335 / 2000 * 100%);
+  }
+
+  &-single {
+    position: absolute;
+    z-index: 1;
+    height: 80%;
+    top: 10%;
+  }
+
+  &-1 {
+    left: 5%;
+    width: 13%;
+
+    &:hover { ~ .members-images { background-position-y: calc(100% / 10 * 1); } }
+  }
+  &-2 {
+    left: 18%;
+    width: 9%;
+
+    &:hover { ~ .members-images { background-position-y: calc(100% / 10 * 2); } }
+  }
+  &-3 {
+    left: 27%;
+    width: 9%;
+
+    &:hover { ~ .members-images { background-position-y: calc(100% / 10 * 3); } }
+  }
+  &-4 {
+    left: 36%;
+    width: 8%;
+
+    &:hover { ~ .members-images { background-position-y: calc(100% / 10 * 4); } }
+  }
+  &-5 {
+    left: 44%;
+    width: 8%;
+
+    &:hover { ~ .members-images { background-position-y: calc(100% / 10 * 5); } }
+  }
+  &-6 {
+    left: 52%;
+    width: 6%;
+
+    &:hover { ~ .members-images { background-position-y: calc(100% / 10 * 6); } }
+  }
+  &-7 {
+    left: 58%;
+    width: 6%;
+
+    &:hover { ~ .members-images { background-position-y: calc(100% / 10 * 7); } }
+  }
+  &-8 {
+    left: 64%;
+    width: 8%;
+
+    &:hover { ~ .members-images { background-position-y: calc(100% / 10 * 8); } }
+  }
+  &-9 {
+    left: 72%;
+    width: 12%;
+
+    &:hover { ~ .members-images { background-position-y: calc(100% / 10 * 9); } }
+  }
+  &-10 {
+    left: 84%;
+    width: 14%;
+
+    &:hover { ~ .members-images { background-position-y: calc(100% / 10 * 10); } }
+  }
+
+  &-images {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-image: url("/assets/images/members.jpg");
+    background-size: 100% auto;
+  }
+}
