feat(): added members-block trough CMS and added contact-block

--- a/app/src/app/components/blocks/members-block/members-block.component.html
+++ b/app/src/app/components/blocks/members-block/members-block.component.html
@@ -1,1 +1,15 @@
-<p>members-block works!</p>
+<section class="members">
+    <div class="members-container">
+        <div class="members-single members-1"></div>
+        <div class="members-single members-2"></div>
+        <div class="members-single members-3"></div>
+        <div class="members-single members-4"></div>
+        <div class="members-single members-5"></div>
+        <div class="members-single members-6"></div>
+        <div class="members-single members-7"></div>
+        <div class="members-single members-8"></div>
+        <div class="members-single members-9"></div>
+        <div class="members-single members-10"></div>
+        <div class="members-images"></div>
+    </div>
+</section>
