edit: making style consistent

--- a/app/src/app/components/blocks/test-block/test-block.component.html
+++ b/app/src/app/components/blocks/test-block/test-block.component.html
@@ -1,5 +1,7 @@
 <section>
+    <div class="main flex jc-center ai-center m-t-m">
     <h1 class="contact-landing-text ta-center m-a-l">Contact Us</h1>
+    </div>
     <div class="flex ai-start">
 
         <div class="contact-us-left">
