--- a/app/src/app/news/component/news/news.component.html
+++ b/app/src/app/news/component/news/news.component.html
@@ -1,5 +1,5 @@
 <div class="main flex jc-center ai-center m-t-m">
-    <h1 class="ta-center b-b">{{page.title}}</h1>
+    <h1 class="ta-center">{{page.title}}</h1>
 </div>
 
 <zg-block-renderer *ngIf="page.blocks" [blocks]="page.blocks"></zg-block-renderer>
