--- a/app/src/app/photo-gallery/component/photo-gallery/photo-gallery.component.html
+++ b/app/src/app/photo-gallery/component/photo-gallery/photo-gallery.component.html
@@ -1,5 +1,5 @@
-<div class="main flex jc-center ai-center">
-    <h1 class="ta-center b-b">{{page.title}}</h1>
+<div class="main flex jc-center ai-center m-t-m">
+    <h1 class="ta-center">{{page.title}}</h1>
 </div>
 <div class="grid m-y-m">
     <h1 class="w-full ta-center m-y-l">Browse trough our galleries</h1>
