--- a/app/src/app/publications/component/publications/publications.component.html
+++ b/app/src/app/publications/component/publications/publications.component.html
@@ -1,5 +1,5 @@
-<div class="main flex jc-center ai-center">
-    <h1 class="ta-center b-b">{{page.title}}</h1>
+<div class="main flex jc-center ai-center m-t-m">
+    <h1 class="ta-center">{{page.title}}</h1>
 </div>
 <section class="m-y-xl">
     <div class="grid">
