edit: links styling

--- a/app/src/app/components/blocks/test-block/test-block.component.html
+++ b/app/src/app/components/blocks/test-block/test-block.component.html
@@ -27,7 +27,7 @@
             <h2 class="m-a-m">Vlatka Zoldoš</h2>
             <h4>Principle Investigator</h4>
             <h4>Laboratory for Epigenetics</h4>
-            <p class="m-a-s">e-mail: vzoldos@biol.pmf.hr</p>
+            <p class="m-a-s"><a href="mailto:vzoldos@biol.pmf.hr">e-mail: vzoldos@biol.pmf.hr</a></p>
             <h3 class="m-a-s">Location:</h3>
             <h5>BIOCentre - Incubation centre for biosceinces</h5>
             <h5>Borongajska cesta 83</h5>
@@ -41,7 +41,8 @@
             <br>
             <h5>Full professor at University of Zagreb Faculty of Science</h5>
             <h5>Department of Biology; Division for Molecular Biology</h5>
-            <p class="m-a-s">Horvatovac 102A; 10000 Zagreb, Croatia</p>
+            <p><a href="https://goo.gl/maps/7HNojfdSQ5DdnUmBA">Horvatovac 102A</a><br></p>
+            <p><a href="https://goo.gl/maps/7HNojfdSQ5DdnUmBA">10 000 Zagreb, Croatia</a><br></p>
         </div>
     </div>
 </section>
