--- a/app/src/app/components/layout/layout.component.html
+++ b/app/src/app/components/layout/layout.component.html
@@ -55,7 +55,7 @@
                 Biology,</b></p>
             <p class="footer-paragraph m-b-s"><b>Facutly of Science University of Zagreb</b>.</p>
             <a href="https://goo.gl/maps/7HNojfdSQ5DdnUmBA">Horvatovac 102A</a><br>
-            <p>10 000 Zagreb, Croatia</p>
+            <a href="https://goo.gl/maps/7HNojfdSQ5DdnUmBA">10 000 Zagreb, Croatia</a><br>
             <a class="footer-paragraph m-b-m" href="tel:+38514606260">Tel- +385 1 4606260</a>
             <br>
             <a class="footer-paragraph m-b-l" href="tel:+38514606286">Fax- +385 1 4606286</a>
