style(): layout adjustment on multiple components

--- a/app/src/app/components/blocks/contact-block/contact-block.component.html
+++ b/app/src/app/components/blocks/contact-block/contact-block.component.html
@@ -1,19 +1,18 @@
 <section>
-    <h1 class="contact-landing-text ta-center m-a-l">Contact Us</h1>
-    <div class="flex ai-start">
+    <div class="main flex jc-center ai-center m-t-m">
+        <h1 class="contact-landing-text ta-center m-a-l">Contact Us</h1>
+    </div>
+    <div class="flex ai-start m-y-xl">
         <div class="contact-us-left">
             <img class="contact-us-photo m-x-l" src="assets/images/contact-us-photo.jpg">
-
             <a href="https://www.facebook.com/CRISPR.EpigeneticsGlycosylation/?_rdc=1&_rdr">
                 <img class="m-a-m m-x-xl" alt="facebook" src="assets/images/face-logo.png"
                      width="40" height="40">
             </a>
-
             <a href="https://www.linkedin.com/in/vlatka-zoldo%C5%A1-b4091b66/?originalSubdomain=hr">
                 <img class="m-a-m m-x-xl" alt="linkedin" src="assets/images/linkedin-logo.png"
                      width="30" height="30">
             </a>
-
             <a href="https://www.researchgate.net/profile/Vlatka_Zoldos2">
                 <img class="m-a-m m-x-xl" alt="researchgate" src="assets/images/researchgate-logo.png"
                      width="35" height="35">
