--- a/app/src/app/lab-members/component/lab-member/lab-member.component.html
+++ b/app/src/app/lab-members/component/lab-member/lab-member.component.html
@@ -1,5 +1,5 @@
 <div class="main flex jc-center ai-center m-t-m">
-    <h1 class="ta-center b-b">{{item.title}}</h1>
+    <h1 class="ta-center">{{item.title}}</h1>
 </div>
 <div class="grid m-y-xl">
     <div class="col-10 flex jc-center fw-wrap">
