style(): style adjustments on multiple components

--- a/app/src/app/components/blocks/contact-block/contact-block.component.html
+++ b/app/src/app/components/blocks/contact-block/contact-block.component.html
@@ -17,7 +17,7 @@
                 </a>
             </div>
         </div>
-        <div class="contact-us-right col-6 ta-center">
+        <div class="col-6 ta-center">
             <h2>Vlatka Zoldoš</h2>
             <h4 class="m-y-m">Principle Investigator</h4>
             <h4 class="m-b-s">Laboratory for Epigenetics</h4>
