--- a/app/src/app/components/layout/layout.component.html
+++ b/app/src/app/components/layout/layout.component.html
@@ -53,12 +53,12 @@
         <div class="col-12 ta-center">
             <p class="footer-paragraph m-t-m"><b>Zoldos Lab is a part of Divison for Molecular Biology, Department of
                 Biology,</b></p>
-            <p class="footer-paragraph m-b-s"><b>Facutly of Science University of Zagreb</b>.</p>
-            <a href="https://goo.gl/maps/7HNojfdSQ5DdnUmBA">Horvatovac 102A</a><br>
-            <a href="https://goo.gl/maps/7HNojfdSQ5DdnUmBA">10 000 Zagreb, Croatia</a><br>
-            <a class="footer-paragraph m-b-m" href="tel:+38514606260">Tel- +385 1 4606260</a>
+            <p class="m-b-s"><b>Facutly of Science University of Zagreb</b>.</p>
+            <a href="https://goo.gl/maps/7HNojfdSQ5DdnUmBA" class="footer-link">Horvatovac 102A</a><br>
+            <a href="https://goo.gl/maps/7HNojfdSQ5DdnUmBA" class="footer-link">10 000 Zagreb, Croatia</a><br>
+            <a class="footer-paragraph m-b-m" href="tel:+38514606260" class="footer-link">Tel- +385 1 4606260</a>
             <br>
-            <a class="footer-paragraph m-b-l" href="tel:+38514606286">Fax- +385 1 4606286</a>
+            <a class="footer-paragraph m-b-l" href="tel:+38514606286" class="footer-link">Fax- +385 1 4606286</a>
         </div>
         </section>
 </footer>
