style(): mobile adjustments on multiple components

--- a/app/src/app/components/blocks/contact-block/contact-block.component.html
+++ b/app/src/app/components/blocks/contact-block/contact-block.component.html
@@ -21,7 +21,7 @@
             <h2>Vlatka Zoldoš</h2>
             <h4 class="m-y-m">Principle Investigator</h4>
             <h4 class="m-b-s">Laboratory for Epigenetics</h4>
-            <a href="mailto:vzoldos@biol.pmf.hr">e-mail: vzoldos@biol.pmf.hr</a>
+            <a href="mailto:vzoldos@biol.pmf.hr" class="email">e-mail: vzoldos@biol.pmf.hr</a>
             <h3 class="m-y-s">Location:</h3>
             <h5>BIOCentre - Incubation centre for biosceinces</h5>
             <h5>Borongajska cesta 83</h5>
