--- a/app/src/app/components/blocks/contact-block/contact-block.component.scss
+++ b/app/src/app/components/blocks/contact-block/contact-block.component.scss
@@ -24,3 +24,11 @@ svg {
 .facebook:hover {
   fill: #4267B2;
 }
+
+.email {
+  font-size: 20px;
+}
+
+.email:hover {
+  text-decoration: underline;
+}
