--- a/app/src/app/components/blocks/members-block/members-block.component.html
+++ b/app/src/app/components/blocks/members-block/members-block.component.html
@@ -1,4 +1,5 @@
-<section class="members">
+<section class="members p-y-xl">
+    <h1 class="m-b-l ta-center">Our lab members</h1>
     <div class="members-container">
         <div class="members-single members-1"></div>
         <div class="members-single members-2"></div>
