--- a/app/src/app/components/blocks/two-block-text/two-block-text.component.html
+++ b/app/src/app/components/blocks/two-block-text/two-block-text.component.html
@@ -1,4 +1,4 @@
-<section class="two-block-text m-y-l">
+<section class="two-block-text m-b-xl">
     <div class="grid ai-center">
         <div class="col-10 col-s-12 flex fw-wrap ai-start jc-around">
             <div class="col-5 col-s-12">
