--- a/app/src/app/publications/component/publications/publications.component.html
+++ b/app/src/app/publications/component/publications/publications.component.html
@@ -19,7 +19,7 @@
                     <h2 class="pub-year">{{year.year}}</h2>
                     <div class="flex p-x-l fw-wrap" *ngFor="let item of year.publications">
                         <p class="publication"><span class="name">{{item.name}}</span><b>{{item.title}}</b> <br> <span>{{item.description}}</span></p>
-                        <a [routerLink]="item.route" class="link">Publication</a>
+                        <a [routerLink]="item.route" class="link">{{item.link}}</a>
                     </div>
                 </div>
             </div>
