--- a/app/src/app/researches/component/researches/researches.component.scss
+++ b/app/src/app/researches/component/researches/researches.component.scss
@@ -9,8 +9,9 @@
   font-size: 30px;
 }
 
+
 .card {
-  transition: all 4s ease-in-out;
+  transition: all .4s ease-in-out;
 }
 
 .card:hover {
@@ -99,6 +100,7 @@
   outline: none;
   color: #323037;
   font-size: 22px;
+  transition: all .4s ease-in-out;
   &:before {
     position: absolute;
     width: 0%;
@@ -136,6 +138,46 @@
 /* Mobile styles
  *============================================================================*/
 
+@media (max-width: 1300px) {
+  .research-image {
+    height: 180px;
+  }
+}
+
+@media (max-width: 1150px) {
+  .research-image {
+    height: 150px;
+  }
+}
+
+@media (max-width: 1050px) {
+  .research-image {
+    height: 130px;
+  }
+}
+
+
+@media (max-width: 900px) {
+  .research-image {
+    border-radius: 0px;
+    border: none;
+    width: 100%;
+    height: 300px;
+  }
+  .research-image-block-image {
+    width: 100%;
+    order: 1;
+  }
+
+  .research-image-block-text {
+    width: 100%;
+    text-align: left;
+    padding: 15px;
+    order: 2 ;
+  }
+}
+
+
 @media (max-width: 600px) {
 
   h1 {
@@ -145,23 +187,6 @@
   .research-image-block-wrapper {
     height: auto;
     padding: 0;
-  }
-
-  .research-image-block-image {
-    width: 100%;
-    order: 1;
-  }
-
-  .research-image {
-    border-radius: 0px;
-    border: none;
-  }
-
-  .research-image-block-text {
-    width: 100%;
-    text-align: left;
-    padding: 15px;
-    order: 2 ;
   }
 
   .research-button-wrapper {
