style(): mobile adjustments

--- a/app/src/app/components/blocks/contact-block/contact-block.component.html
+++ b/app/src/app/components/blocks/contact-block/contact-block.component.html
@@ -2,8 +2,8 @@
     <div class="main flex jc-center ai-center">
         <h1 class="contact-landing-text ta-center m-a-l">Contact Us</h1>
     </div>
-    <div class="flex ai-start m-y-xl">
-        <div class="contact-us-left col-6">
+    <div class="flex fw-wrap ai-start m-y-xl">
+        <div class="contact-us-left col-6 col-s-12">
             <img class="w-full" src="assets/images/contact-us-photo.jpg">
             <div class="social-icons flex ai-center jc-between m-t-s">
                 <a href="https://www.facebook.com/CRISPR.EpigeneticsGlycosylation/?_rdc=1&_rdr">
@@ -17,7 +17,7 @@
                 </a>
             </div>
         </div>
-        <div class="col-6 ta-center">
+        <div class="col-6 col-s-12 ta-center">
             <h2>Vlatka Zoldoš</h2>
             <h4 class="m-y-m">Principle Investigator</h4>
             <h4 class="m-b-s">Laboratory for Epigenetics</h4>
