--- a/app/src/app/publications/component/publications/publications.component.scss
+++ b/app/src/app/publications/component/publications/publications.component.scss
@@ -109,3 +109,26 @@ option  {
   margin-left: auto;
   margin-right: 0;
 }
+
+
+
+
+
+/* Mobile Styles
+ *============================================================================*/
+@media (max-width: 900px)  {
+  .pub-container {
+    border: none;
+  }
+  .pub-wrapper {
+    flex-wrap: wrap;
+  }
+  .pub-year {
+    position: unset;
+    margin-bottom: 10px;
+    margin-left: 0px;
+  }
+  .container {
+    padding: 0px;
+  }
+}
