--- a/app/src/app/lab-members/component/lab-member/lab-member.component.scss
+++ b/app/src/app/lab-members/component/lab-member/lab-member.component.scss
@@ -35,3 +35,16 @@
     background: #868686;
   }
 }
+
+
+
+
+
+
+/* Mobile Styles
+ *============================================================================*/
+@media (max-width: 900px)  {
+  h1 {
+    font-size: 30px;
+  }
+}
