--- a/app/src/app/photo-gallery/component/photo-gallery/photo-gallery.component.scss
+++ b/app/src/app/photo-gallery/component/photo-gallery/photo-gallery.component.scss
@@ -50,3 +50,13 @@
 }
 
 
+
+
+
+/* Mobile Styles
+ *============================================================================*/
+@media (max-width: 900px)  {
+  h1 {
+    font-size: 30px;
+  }
+}
