--- a/app/src/app/photo-gallery/component/photo-gallery-list/photo-gallery-list.component.html
+++ b/app/src/app/photo-gallery/component/photo-gallery-list/photo-gallery-list.component.html
@@ -3,7 +3,7 @@
         <div class="col-12 ta-center">
             <h1>Photos from {{item.year}}</h1>
         </div>
-        <div class="col-4" *ngFor="let data of item.imageGallery">
+        <div class="col-4 col-s-6 col-xs-12" *ngFor="let data of item.imageGallery">
             <div class="image-wrapper" [ngStyle]="{'background-image': 'url('+ data.thumbImg +')'}"></div>
             <div class="image-overlay">
                 <div class="image-container"></div>
