--- a/app/src/app/researches/component/research/research.component.scss
+++ b/app/src/app/researches/component/research/research.component.scss
@@ -18,3 +18,15 @@
   font-size: 20px;
 }
 
+
+
+
+
+
+/* Mobile Styles
+ *============================================================================*/
+@media (max-width: 900px)  {
+  h1 {
+    font-size: 30px;
+  }
+}
