edit: 404 and single news style changes

--- a/app/src/app/components/page-not-found/page-not-found.component.scss
+++ b/app/src/app/components/page-not-found/page-not-found.component.scss
@@ -4,7 +4,7 @@
   margin:0px;
 }
 body{
-  background:black;
+  background: white;
 }
 .st0{font-family:'FootlightMTLight';}
 .st1{font-size:83.0285px;}
