--- a/app/src/app/news/component/news-list/news-list.component.html
+++ b/app/src/app/news/component/news-list/news-list.component.html
@@ -1,11 +1,11 @@
 <section>
-    <div class="grid m-t-xl">
+    <div class="grid m-t-l">
         <div class="col-12">
-            <div class="col-12 ta-center">
+            <div class="flex jc-center ai-center m-t-m">
                 <h1>{{item.title}}</h1>
             </div>
             <div class="wrapper">
-                <div class="flex ai-center jc-between b-b">
+                <div class="main flex ai-center jc-between b-b">
                     <p class="news-author">{{item.author}}</p>
                     <p class="news-author">{{item.date}}</p>
                 </div>
