--- a/app/src/app/components/blocks/researches-block/researches-block.component.scss
+++ b/app/src/app/components/blocks/researches-block/researches-block.component.scss
@@ -58,6 +58,69 @@
 
 
 
+/* Hover styles
+ *============================================================================*/
+.research-image-block-wrapper{
+  position: relative;
+  transition: all 0.25s ease-in-out;
+
+  &::before,
+  &::after {
+    box-sizing: inherit;
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 100%;
+  }
+
+  &::before,
+  &::after {
+    border: 2px solid transparent;
+    width: 0;
+    height: 0;
+  }
+
+  &::before {
+    top: 0;
+    left: 0;
+  }
+
+  &::after {
+    bottom: 0;
+    right: 0;
+  }
+
+  &:hover {
+    color: #868686;
+  }
+
+  &:hover::before,
+  &:hover::after {
+    width: 100%;
+    height: 100%;
+  }
+
+  &:hover::before {
+    border-top-color: #868686;
+    border-right-color: #868686;
+    transition:
+            width 0.25s ease-out,
+            height 0.25s ease-out 0.25s;
+  }
+
+  &:hover::after {
+    border-bottom-color: #868686;
+    border-left-color: #868686;
+    transition:
+            border-color 0s ease-out 0.5s,
+            width 0.25s ease-out 0.5s,
+            height 0.25s ease-out 0.75s;
+  }
+}
+
+
+
+
 /* Mobile styles
  *============================================================================*/
 
