--- a/app/src/app/lab-members/component/lab-member/lab-member.component.html
+++ b/app/src/app/lab-members/component/lab-member/lab-member.component.html
@@ -5,7 +5,7 @@
     <div class="col-10 flex jc-center fw-wrap">
         <div class="col-12 members-image" [ngStyle]="{'background-image': 'url('+ item.image +')'}"></div>
         <div class="col-12">
-            <scully-content class="m-y-s"></scully-content>
+            <scully-content></scully-content>
             <div class="button-wrapper flex jc-end">
                 <a routerLink="/lab-members" class="members-btn">Other Members</a>
             </div>
