--- a/app/src/app/components/blocks/researches-block/researches-block.component.html
+++ b/app/src/app/components/blocks/researches-block/researches-block.component.html
@@ -4,7 +4,7 @@
             <h2 class="research-image-block-title m-y-s" *ngIf="data.title">{{data.title}}</h2>
             <p class="research-image-block-subtitle" *ngIf="data.subTitle">{{data.subTitle}}</p>
         </div>
-        <a [routerLink]="['researches', item.id]" class="research-image-block-wrapper m-b-l" *ngFor="let item of researches$ | async;  let odd = odd" [class.even]="odd">
+        <a [routerLink]="item.route" class="research-image-block-wrapper m-b-l" *ngFor="let item of researches$ | async;  let odd = odd" [class.even]="odd">
             <div class="research-image-block-text" [class.even]="odd">
                 <h5 class="research-image-block-title">{{item.title}}</h5>
                 <p class="research-image-block-name m-y-s" *ngIf="item.author">{{item.author}}</p>
