--- a/app/src/app/components/layout/layout.component.html
+++ b/app/src/app/components/layout/layout.component.html
@@ -1,17 +1,17 @@
 <header>
     <div class="header">
         <div class="header-logo">
-            <a (click)="goTo(['/'])">
+            <a  [routerLink]="['/']">
                 <img src="assets/icons/logo.svg" alt="Zoldos Group Logo">
             </a>
         </div>
         <div class="header-links hide-s">
             <a
                 *ngFor="let link of settings.links"
-                (click)="goTo([link.link])"
                 routerLinkActive="active"
-                class="links hide-s"
-                [routerLinkActiveOptions]="{exact: true}">
+                [routerLink]="[link.link]"
+                [routerLinkActiveOptions]="{exact: link.link === '/'}"
+                class="links hide-s">
                 {{link.title}}
             </a>
         </div>
@@ -22,11 +22,12 @@
         </div>
         <div class="slide-menu hide-s" [class.active-menu]="menu">
             <a
-                    *ngFor="let link of settings.links"
-                    (click)="goTo([link.link])"
-                    routerLinkActive="active"
-                    class="slide-menu-links"
-                    [routerLinkActiveOptions]="{exact: true}">
+                *ngFor="let link of settings.links"
+                routerLinkActive="active"
+                class="slide-menu-links"
+                [routerLink]="[link.link]"
+                [routerLinkActiveOptions]="{exact: link.link === '/'}"
+                (click)="toggleMenu()">
                 {{link.title}}
             </a>
         </div>
