--- a/app/src/app/photo-gallery/component/photo-gallery-list/photo-gallery-list.component.html
+++ b/app/src/app/photo-gallery/component/photo-gallery-list/photo-gallery-list.component.html
@@ -4,10 +4,10 @@
     </div>
     <div class="grid m-y-xl">
         <div class="col-4 col-s-6 col-xs-12" *ngFor="let data of item.imageGallery">
-            <div class="image-wrapper" [ngStyle]="{'background-image': 'url('+ data.thumbImg +')'}"></div>
-            <div class="image-overlay">
-                <div class="image-container"></div>
-            </div>
+            <div class="image-wrapper" (click)="toggleGallery()"  [ngStyle]="{'background-image': 'url('+ data.thumbImg +')'}"></div>
         </div>
+    </div>
+    <div class="image-overlay" [class.active-gallery]="gallery">
+        <div class="image-container"></div>
     </div>
 </section>
