--- a/app/src/app/photo-gallery/component/photo-gallery-list/photo-gallery-list.component.scss
+++ b/app/src/app/photo-gallery/component/photo-gallery-list/photo-gallery-list.component.scss
@@ -4,6 +4,7 @@
   background-position: center;
   background-size: cover;
   width: 100%;
+  cursor: pointer;
 }
 
 
@@ -17,6 +18,26 @@
   border-bottom:2px solid #323037;
 }
 
+
+
+.image-overlay {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  pointer-events: none;
+  position: absolute;
+  content: '';
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  background: black;
+  opacity: 0;
+  &.active-gallery {
+    opacity: 0.8;
+    pointer-events: all;
+  }
+}
 
 
 
