--- a/app/src/app/photo-gallery/component/photo-gallery-list/photo-gallery-list.component.html
+++ b/app/src/app/photo-gallery/component/photo-gallery-list/photo-gallery-list.component.html
@@ -9,7 +9,7 @@
     </div>
     <div class="image-overlay" [class.active-gallery]="gallery">
         <div class="image-container">
-            <img [src]="gallery" alt="">
+            <img [src]="fullImg" alt="">
         </div>
     </div>
 </section>
