--- a/app/src/app/components/blocks/news-block/news-block.component.scss
+++ b/app/src/app/components/blocks/news-block/news-block.component.scss
@@ -1,23 +1,73 @@
-.images-block {
-  background: #f6f6f6;
-  &-image {
-    height: 400px;
+.img-wrapper {
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  min-height: 300px;
+}
+
+.news-title {
+  color: #696969;
+  font-size: 1.25rem;
+  font-weight: 300;
+  letter-spacing: 2px;
+  text-transform: uppercase;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+.date {
+  color: #696969;
+}
+
+.news-info {
+  padding: 20px;
+  display: flex;
+  flex-direction: column;
+  flex: 1;
+}
+
+.card {
+  background-color: white;
+  border-radius: 0.25rem;
+  display: flex;
+  border: 1px solid #868686;
+  flex-direction: column;
+  overflow: hidden;
+  height: 100%;
+  cursor: pointer;
+  transition: all .4s ease-in-out;
+}
+
+.card:hover {
+  box-shadow: 0px 0px 13px 0px rgba(0,0,0,0.75);
+  .news-btn {
+    background: #868686;
+    color: white;
   }
 }
 
-.wrapper {
+.news-btn {
+  background-color: white;
+  border: 1px solid gray;
+  color: #868686;
+  padding: 0.5rem;
+  text-transform: uppercase;
+  display: block;
   width: 100%;
-  transition: all .3s ease-in-out;
+  margin-top: auto;
+  text-align: center;
+  transition: all .4s ease-in-out;
 }
 
-
-.content-wrapper {
-  box-shadow: 0px 0.0375em 0.125em 0px;
+.news-description {
+  color: #999999;
+  margin-bottom: 20px;
 }
 
-.wrapper:hover {
-  box-shadow: 0px 0px 13px 0px rgba(0,0,0,0.75);
+.news-button-wrapper {
+  margin-top: auto;
 }
+
 
 
 
