--- a/app/src/app/news/component/news/news.component.html
+++ b/app/src/app/news/component/news/news.component.html
@@ -1,4 +1,4 @@
-<div class="main flex jc-center ai-center m-t-m">
+<div class="main flex jc-center ai-center">
     <h1 class="ta-center">{{page.title}}</h1>
 </div>
 
@@ -6,8 +6,6 @@
 
 <section class="m-y-xl">
     <div class="grid jc-start">
-        <div class="col-12 m-y-l ta-center">
-        </div>
         <div class="col-4 col-s-6 col-xs-12" *ngFor="let item of items$ | async">
             <a [routerLink]="item.route" class="card">
                 <div class="img-wrapper" [ngStyle]="{'background-image': 'url('+ item.image +')'}"></div>
