style(): minor adjustments

--- a/app/src/app/photo-gallery/component/photo-gallery/photo-gallery.component.html
+++ b/app/src/app/photo-gallery/component/photo-gallery/photo-gallery.component.html
@@ -1,8 +1,7 @@
 <div class="main flex jc-center ai-center m-t-m">
     <h1 class="ta-center">{{page.title}}</h1>
 </div>
-<div class="grid m-y-m">
-    <h1 class="w-full ta-center m-y-l">Browse trough our galleries</h1>
+<div class="grid m-y-xl">
     <a [routerLink]="year.route" class=" col-4 col-s-6 col-xs-12" *ngFor="let year of items$ | async" [id]="year.year">
         <div class="gallery-card">
             <h2 class="year m-y-s">{{year.year}}</h2>
