--- a/app/src/app/components/blocks/news-block/news-block.component.html
+++ b/app/src/app/components/blocks/news-block/news-block.component.html
@@ -1,5 +1,5 @@
 <section class="m-y-xl images-block">
-    <div class="grid p-y-xl jc-around">
+    <div class="grid jc-around">
         <div class="col-12 ta-center" *ngIf="data.title || data.subTitle">
             <h1 *ngIf="data.title">{{data.title}}</h1>
             <h4 *ngIf="data.subTitle" class="info m-t-m m-b-l">{{data.subTitle}}</h4>
