--- a/app/src/app/photo-gallery/component/photo-gallery-list/photo-gallery-list.component.html
+++ b/app/src/app/photo-gallery/component/photo-gallery-list/photo-gallery-list.component.html
@@ -6,10 +6,13 @@
         <div class="col-4 col-s-6 col-xs-12" *ngFor="let data of item.imageGallery">
             <div class="image-wrapper" (click)="toggleGallery(data.fullImg)"  [ngStyle]="{'background-image': 'url('+ data.thumbImg +')'}"></div>
         </div>
-    </div>
-    <div class="image-overlay" [class.active-gallery]="gallery" (click)="toggleGallery()">
-        <div class="image-container">
-            <img [src]="gallery" alt="">
+        <div class="image-overlay" [class.active-gallery]="gallery">
+            <div class="image-container">
+                <img [src]="gallery" alt="" class="full-img">
+                <div class="close-btn-container" (click)="toggleGallery()">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="white" class="close"><path d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"/><path d="M0 0h24v24H0z" fill="none"/></svg>
+                </div>
+            </div>
         </div>
     </div>
 </section>
