style(): added active classes for mobile menu, adjusted style for mobile menu

--- a/app/src/app/components/layout/layout.component.html
+++ b/app/src/app/components/layout/layout.component.html
@@ -23,7 +23,7 @@
         <div class="slide-menu hide-s" [class.active-menu]="menu">
             <a
                 *ngFor="let link of settings.links"
-                routerLinkActive=""
+                routerLinkActive="active"
                 class="slide-menu-links"
                 [routerLink]="[link.link]"
                 [routerLinkActiveOptions]="{exact: link.link === '/'}"
