--- a/app/src/app/components/layout/layout.component.scss
+++ b/app/src/app/components/layout/layout.component.scss
@@ -69,11 +69,7 @@
   }
 }
 
-.active {
-  font-weight: 300;
-  color: 	#C71585 !important;
-  border-bottom: 1px solid #C71585;
-}
+
 
 
 
@@ -140,6 +136,7 @@
   padding: 20px;
   transition: .7s ease-in-out;
   transform: translateX(150%);
+  box-shadow: 0 3px 1px -2px rgba(0, 0, 0, 0.2), 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 1px 5px 0 rgba(0, 0, 0, 0.12);
 
   &-links {
     position: relative;
@@ -151,6 +148,10 @@
     font-size: 18px;
     transform: translateX(100%);
     transition: all .2s, transform 1s;
+    &.active {
+      font-weight: 300;
+      color: 	#C71585 !important;
+    }
   }
 }
 
@@ -161,6 +162,7 @@
 
 
 .slide-menu.active-menu {
+
 
   .slide-menu-links:nth-child(1) {
     transform: translateX(0%);
