--- a/app/src/app/photo-gallery/component/photo-gallery-list/photo-gallery-list.component.scss
+++ b/app/src/app/photo-gallery/component/photo-gallery-list/photo-gallery-list.component.scss
@@ -25,7 +25,7 @@
   align-items: center;
   justify-content: center;
   pointer-events: none;
-  position: absolute;
+  position: fixed;
   content: '';
   top: 0;
   left: 0;
