--- a/app/src/app/components/blocks/portfolio-block/portfolio-block.component.scss
+++ b/app/src/app/components/blocks/portfolio-block/portfolio-block.component.scss
@@ -16,11 +16,6 @@
     width: 60%;
     text-align: left;
   }
-  &-title {
-    color: #484848!important;
-    font-weight: 700;
-    text-transform: uppercase;
-  }
   &-subtitle {
     font-size: 1.7em;
     color: #aaa;
@@ -50,6 +45,10 @@
     border: 9px solid #868686;
     border-radius: 50%;
   }
+}
+
+.research-section-title {
+
 }
 
 
