--- a/app/src/app/components/blocks/researches-block/researches-block.component.html
+++ b/app/src/app/components/blocks/researches-block/researches-block.component.html
@@ -1,12 +1,12 @@
 <section class="m-y-xl">
     <div class="grid">
         <div class="col-12 ta-center m-y-l" *ngIf="data.title || data.subTitle">
-            <h2 class="research-image-block-title m-y-s" *ngIf="data.title">{{data.title}}</h2>
-            <p class="research-image-block-subtitle" *ngIf="data.subTitle">{{data.subTitle}}</p>
+            <h1 class="research-section-title m-y-s" *ngIf="data.title">{{data.title}}</h1>
+            <p class="research-section-subtitle" *ngIf="data.subTitle">{{data.subTitle}}</p>
         </div>
         <a [routerLink]="item.route" class="research-image-block-wrapper m-b-l" *ngFor="let item of researches$ | async;  let odd = odd" [class.even]="odd">
             <div class="research-image-block-text" [class.even]="odd">
-                <h5 class="research-image-block-title">{{item.title}}</h5>
+                <h5 class="research-title">{{item.title}}</h5>
                 <p class="research-image-block-name m-y-s" *ngIf="item.author">{{item.author}}</p>
                 <p class="research-image-block-content" [innerHTML]="item.description | MTH"></p>
             </div>
