--- a/app/src/app/components/blocks/researches-block/researches-block.component.scss
+++ b/app/src/app/components/blocks/researches-block/researches-block.component.scss
@@ -14,15 +14,6 @@
     width: 60%;
     text-align: left;
   }
-  &-title {
-    color: #484848!important;
-    font-weight: 700;
-    text-transform: uppercase;
-  }
-  &-subtitle {
-    font-size: 1.7em;
-    color: #aaa;
-  }
   &-name {
     text-transform: uppercase;
     font-size: 0.9em;
@@ -47,6 +38,23 @@
     border: 9px solid #868686;
     border-radius: 50%;
   }
+}
+
+.research-title {
+  color: #484848!important;
+  font-weight: 700;
+  text-transform: uppercase;
+}
+
+.research-section-title {
+    color: #484848!important;
+    font-weight: 700;
+    text-transform: uppercase;
+}
+
+.research-section-subtitle {
+    font-size: 1.7em;
+    color: #aaa;
 }
 
 .even {
@@ -144,6 +152,15 @@
 
 
 @media (max-width: 900px)  {
+  .research-section-title {
+    font-size: 30px;
+  }
+  .research-section-subtitle {
+    font-size: 25px;
+  }
+  .research-title {
+    font-size: 20px;
+  }
   .research-image-block-text {
     width: 100%;
     order: 2;
