--- a/app/src/app/researches/component/researches/researches.component.scss
+++ b/app/src/app/researches/component/researches/researches.component.scss
@@ -139,31 +139,47 @@
  *============================================================================*/
 
 @media (max-width: 1300px) {
+
   .research-image {
     height: 180px;
   }
+
 }
 
 @media (max-width: 1150px) {
+
   .research-image {
     height: 150px;
   }
+
 }
 
 @media (max-width: 1050px) {
+
   .research-image {
     height: 130px;
   }
+
 }
 
 
 @media (max-width: 900px) {
+
+  h1 {
+    font-size: 30px;
+  }
+
+  .research-title {
+    font-size: 20px;
+  }
+
   .research-image {
     border-radius: 0px;
     border: none;
     width: 100%;
     height: 300px;
   }
+
   .research-image-block-image {
     width: 100%;
     order: 1;
@@ -175,6 +191,7 @@
     padding: 15px;
     order: 2 ;
   }
+
   .research-button-wrapper {
     margin-top: calc(8px + .5vw);
   }
@@ -182,11 +199,6 @@
 
 
 @media (max-width: 600px) {
-
-  h1 {
-    font-size: 30px;
-  }
-
   .research-image-block-wrapper {
     height: auto;
     padding: 0;
