--- a/app/src/app/photo-gallery/component/photo-gallery-list/photo-gallery-list.component.scss
+++ b/app/src/app/photo-gallery/component/photo-gallery-list/photo-gallery-list.component.scss
@@ -82,3 +82,12 @@
     right: 5%;
   }
 }
+@media (max-width: 600px) {
+  .full-img {
+    width: 100%;
+    height: 250px;
+  }
+  .image-container {
+    height: 350px;
+  }
+}
